2015-11-11  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/64651
	* libsupc++/exception_ptr.h (rethrow_exception): Add using-declaration
	to __exception_ptr namespace.
	* testsuite/18_support/exception_ptr/rethrow_exception.cc: Test ADL.
	Remove unnecessary test variables.

2015-11-10  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/68190
	* include/bits/stl_multiset.h (multiset::find): Fix return types.
	* include/bits/stl_set.h (set::find): Likewise.
	* testsuite/23_containers/map/operations/2.cc: Test find return types.
	* testsuite/23_containers/multimap/operations/2.cc: Likewise.
	* testsuite/23_containers/multiset/operations/2.cc: Likewise.
	* testsuite/23_containers/set/operations/2.cc: Likewise.

	* doc/xml/manual/status_cxx2017.xml: Update.
	* doc/html/*: Regenerate.

	* include/bits/functional_hash.h: Fix grammar in comment.

2015-11-09  François Dumont  <fdumont@gcc.gnu.org>

	* include/bits/stl_algo.h
	(partial_sort_copy): Instantiate std::iterator_traits only if concept
	checks.
	(lower_bound): Likewise.
	(upper_bound): Likewise.
	(equal_range): Likewise.
	(binary_search): Likewise.
	* include/bits/stl_heap.h (pop_heap): Likewise.

2015-11-06  Kai Tietz  <ktietz70@googlemail.com>

	* testsuite/26_numerics/complex/requirements/constexpr.cc
	* testsuite/26_numerics/complex/requirements/constexpr_functions.cc:
	Use constexpr where needed.

2015-11-06  David Malcolm  <dmalcolm@redhat.com>

	* testsuite/lib/libstdc++.exp (v3_target_compile): Add
	-fno-diagnostics-show-caret -fdiagnostics-color=never to
	option's additional_flags.

2015-11-03  Jason Merrill  <jason@redhat.com>

	* libsupc++/new: Declare sized deletes.

2015-11-03  Ville Voutilainen  <ville.voutilainen@gmail.com>

	Make the default constructors of tuple and pair conditionally explicit.
	* include/std/type_traits (is_unsigned, __is_array_unknown_bounds,
	__is_default_constructible_atom, __is_default_constructible_safe,